--- a/TFG_DAW/frontend/src/app/components/home/home.component.css
+++ b/TFG_DAW/frontend/src/app/components/home/home.component.css
@@ -48,12 +48,160 @@ h3 {
     border-color: #2D0C57;
   }
 
+  
+  /* barra-filtros */
+  .category-icon {
+    font-size: 32px;
+    display: block;
+  }
+  .category-item {
+    text-align: center;
+    width: 100%;
+    padding: 10px;
+    cursor: pointer;
+  }
+  .category-item:hover {
+    background-color: #f8f9fa;
+    border-radius: 10px;
+  }
+  .search-bar {
+    background: #fff;
+    padding: 15px;
+    border-radius: 40px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  }
+  .search-input {
+    border: none;
+    outline: none;
+    background: transparent;
+  }
+  .icon-bar {
+    border-radius: 10px;
+    padding: 10px;
+  }
+  
+  .date-input {
+    border-radius: 0.5rem;
+    border: 2px solid #E0AAFF;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    min-height: 35px;
+    padding: 2px;
+  }
+  
+  /* Personas filtro */
+  .radio-inputs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 350px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  .radio-inputs > * {
+    margin: 6px;
+  }
+  
+  .radio-input:checked + .radio-tile {
+    border-color: #2D0C57;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    color: #240046;
+  }
+  
+  .radio-input:checked + .radio-tile:before {
+    transform: scale(1);
+    opacity: 1;
+    background-color: #240046;
+    border-color: #240046;
+  }
+  
+  .radio-input:checked + .radio-tile .radio-label {
+    color: #240046;
+  }
+  
+  .radio-input:focus + .radio-tile {
+    border-color: #240046;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 0 0 4px #E0AAFF;
+  }
+  
+  .radio-input:focus + .radio-tile:before {
+    transform: scale(1);
+    opacity: 1;
+  }
+  
+  .radio-tile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 95px;
+    min-height: 35px;
+    border-radius: 0.5rem;
+    border: 2px solid #D9D9D9;
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    transition: 0.15s ease;
+    cursor: pointer;
+    position: relative;
+  }
+  
+  .radio-tile:before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 0.75rem;
+    height: 0.75rem;
+    border: 2px solid #E0AAFF;
+    background-color: #fff;
+    border-radius: 50%;
+    top: 0.25rem;
+    left: 0.25rem;
+    opacity: 0;
+    transform: scale(0);
+    transition: 0.25s ease;
+  }
+  
+  .radio-tile:hover {
+    border-color: #2D0C57;
+  }
+  
+  .radio-tile:hover:before {
+    transform: scale(1);
+    opacity: 1;
+  }
+  
+  .radio-label {
+    color: #707070;
+    transition: 0.375s ease;
+    text-align: center;
+    font-size: 13px;
+  }
+  
+  .radio-input {
+    clip: rect(0 0 0 0);
+    -webkit-clip-path: inset(100%);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+
+  /* Divider */
+  .custom-divider {
+    background-color: #240046;
+    width: 100%;
+  }
+
   /* Imagenes / card */
   .card {
     box-sizing: border-box;
     width: 300px;
     height: 500px;
-    position: relative; /* necesario para posicionar elementos hijos */
+    position: relative;
     border: 1px solid white;
     box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
     border-radius: 17px;
@@ -93,144 +241,3 @@ h3 {
     max-height: 30px;
     padding: 1px 5px;
   }
-  
-  /* seccion-map */
-.category-icon {
-  font-size: 32px;
-  display: block;
-}
-.category-item {
-  text-align: center;
-  width: 100%;
-  padding: 10px;
-  cursor: pointer;
-}
-.category-item:hover {
-  background-color: #f8f9fa;
-  border-radius: 10px;
-}
-.search-bar {
-  background: #fff;
-  padding: 15px;
-  border-radius: 40px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-}
-.search-input {
-  border: none;
-  outline: none;
-  background: transparent;
-}
-.icon-bar {
-  border-radius: 10px;
-  padding: 10px;
-}
-
-.date-input {
-  border-radius: 0.5rem;
-  border: 2px solid #E0AAFF;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  min-height: 35px;
-  padding: 2px;
-}
-
-/* Personas filtro */
-.radio-inputs {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 350px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.radio-inputs > * {
-  margin: 6px;
-}
-
-.radio-input:checked + .radio-tile {
-  border-color: #2D0C57;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  color: #240046;
-}
-
-.radio-input:checked + .radio-tile:before {
-  transform: scale(1);
-  opacity: 1;
-  background-color: #240046;
-  border-color: #240046;
-}
-
-.radio-input:checked + .radio-tile .radio-label {
-  color: #240046;
-}
-
-.radio-input:focus + .radio-tile {
-  border-color: #240046;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 0 0 4px #E0AAFF;
-}
-
-.radio-input:focus + .radio-tile:before {
-  transform: scale(1);
-  opacity: 1;
-}
-
-.radio-tile {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 95px;
-  min-height: 35px;
-  border-radius: 0.5rem;
-  border: 2px solid #D9D9D9;
-  background-color: #fff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  transition: 0.15s ease;
-  cursor: pointer;
-  position: relative;
-}
-
-.radio-tile:before {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 0.75rem;
-  height: 0.75rem;
-  border: 2px solid #E0AAFF;
-  background-color: #fff;
-  border-radius: 50%;
-  top: 0.25rem;
-  left: 0.25rem;
-  opacity: 0;
-  transform: scale(0);
-  transition: 0.25s ease;
-}
-
-.radio-tile:hover {
-  border-color: #2D0C57;
-}
-
-.radio-tile:hover:before {
-  transform: scale(1);
-  opacity: 1;
-}
-
-.radio-label {
-  color: #707070;
-  transition: 0.375s ease;
-  text-align: center;
-  font-size: 13px;
-}
-
-.radio-input {
-  clip: rect(0 0 0 0);
-  -webkit-clip-path: inset(100%);
-  clip-path: inset(100%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-}
