login-registro/agregar/styles

--- a/TFG_DAW/frontend/src/app/components/detail/detail.component.css
+++ b/TFG_DAW/frontend/src/app/components/detail/detail.component.css
@@ -4,9 +4,6 @@
     width: 300px;
     height: 500px;
     position: relative;
-    border: 1px solid white;
-    box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
-    border-radius: 17px;
     overflow: hidden; /* para que la imagen no se salga del borde redondeado */
     cursor: pointer;
     transition: all 0.5s;
@@ -15,16 +12,6 @@
     justify-content: center;
     user-select: none;
     font-weight: bolder;
-    color: black;
-  }
-  
-  .card:hover {
-    border: 1px solid black;
-    transform: scale(1.05);
-  }
-  
-  .card:active {
-    transform: scale(0.95) rotateZ(1.7deg);
   }
   
   .card-img {
@@ -47,7 +34,7 @@
   }
   
   .card-body-detail {
-      background-color: #3C096C;
+      background-color: #240046;
       border-radius: 15px 15px 0 0;
     }
 
