--- a/TFG_DAW/frontend/src/app/components/detail/detail.component.html
+++ b/TFG_DAW/frontend/src/app/components/detail/detail.component.html
@@ -5,7 +5,7 @@
   <!-- Contenido principal tipo detalle -->
   <main class="flex-fill">
     <div class="container d-flex justify-content-center align-items-start py-5">
-      <div class="row w-100" style="max-width: 1200px">
+      <div class="row w-100" style="max-width: 1400px">
         <div class="col-12">
           <div
             class="card-detail rounded-4 shadow-lg"
@@ -36,8 +36,8 @@
               "
             >
               <h3 class="card-title text-center">PRIVATE STUDIO</h3>
-              <div class="container col-10">
-                <div class="row">
+              <div class="row">
+                <div class="container col-10 my-2">
                   <p class="card-text text-light my-3">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Phasellus vel convallis justo. Curabitur tempor pulvinar
@@ -46,64 +46,64 @@
                     malesuada
                   </p>
                 </div>
-                <div class="row">
-                  <h4 class="col-4"></h4>
-                  <button class="btn btn-light col-4">Reservar</button>
-                  <h4 class="col-4 text-light">
-                    10-15<span
-                      ><svg
-                        width="32"
-                        height="32"
-                        viewBox="0 0 32 32"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M23.9999 9.54663C23.9199 9.5333 23.8266 9.5333 23.7466 9.54663C21.9066 9.47996 20.4399 7.9733 20.4399 6.10663C20.4399 4.19996 21.9733 2.66663 23.8799 2.66663C25.7866 2.66663 27.3199 4.2133 27.3199 6.10663C27.3066 7.9733 25.8399 9.47996 23.9999 9.54663Z"
-                          stroke="white"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                        <path
-                          d="M22.6267 19.2533C24.4533 19.5599 26.4667 19.2399 27.88 18.2933C29.76 17.0399 29.76 14.9866 27.88 13.7333C26.4533 12.7866 24.4133 12.4666 22.5867 12.7866"
-                          stroke="white"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                        <path
-                          d="M7.95989 9.54663C8.03989 9.5333 8.13323 9.5333 8.21323 9.54663C10.0532 9.47996 11.5199 7.9733 11.5199 6.10663C11.5199 4.19996 9.98656 2.66663 8.0799 2.66663C6.17323 2.66663 4.63989 4.2133 4.63989 6.10663C4.65323 7.9733 6.11989 9.47996 7.95989 9.54663Z"
-                          stroke="white"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                        <path
-                          d="M9.33325 19.2533C7.50659 19.5599 5.49326 19.2399 4.07992 18.2933C2.19992 17.0399 2.19992 14.9866 4.07992 13.7333C5.50659 12.7866 7.54659 12.4666 9.37325 12.7866"
-                          stroke="white"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                        <path
-                          d="M15.9999 19.5067C15.9199 19.4934 15.8266 19.4934 15.7466 19.5067C13.9066 19.44 12.4399 17.9334 12.4399 16.0667C12.4399 14.16 13.9733 12.6267 15.8799 12.6267C17.7866 12.6267 19.3199 14.1734 19.3199 16.0667C19.3066 17.9334 17.8399 19.4534 15.9999 19.5067Z"
-                          stroke="white"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                        <path
-                          d="M12.12 23.7067C10.24 24.9601 10.24 27.0134 12.12 28.2667C14.2533 29.6934 17.7466 29.6934 19.88 28.2667C21.76 27.0134 21.76 24.9601 19.88 23.7067C17.76 22.2934 14.2533 22.2934 12.12 23.7067Z"
-                          stroke="white"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                      </svg>
-                    </span>
-                  </h4>
-                </div>
+              </div>
+              <div class="row">
+                <h4 class="col-4"></h4>
+                <button class="btn btn-light col-4">Reservar</button>
+                <h4 class="col-4 text-light">
+                  10-15<span
+                    ><svg
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M23.9999 9.54663C23.9199 9.5333 23.8266 9.5333 23.7466 9.54663C21.9066 9.47996 20.4399 7.9733 20.4399 6.10663C20.4399 4.19996 21.9733 2.66663 23.8799 2.66663C25.7866 2.66663 27.3199 4.2133 27.3199 6.10663C27.3066 7.9733 25.8399 9.47996 23.9999 9.54663Z"
+                        stroke="white"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M22.6267 19.2533C24.4533 19.5599 26.4667 19.2399 27.88 18.2933C29.76 17.0399 29.76 14.9866 27.88 13.7333C26.4533 12.7866 24.4133 12.4666 22.5867 12.7866"
+                        stroke="white"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M7.95989 9.54663C8.03989 9.5333 8.13323 9.5333 8.21323 9.54663C10.0532 9.47996 11.5199 7.9733 11.5199 6.10663C11.5199 4.19996 9.98656 2.66663 8.0799 2.66663C6.17323 2.66663 4.63989 4.2133 4.63989 6.10663C4.65323 7.9733 6.11989 9.47996 7.95989 9.54663Z"
+                        stroke="white"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M9.33325 19.2533C7.50659 19.5599 5.49326 19.2399 4.07992 18.2933C2.19992 17.0399 2.19992 14.9866 4.07992 13.7333C5.50659 12.7866 7.54659 12.4666 9.37325 12.7866"
+                        stroke="white"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M15.9999 19.5067C15.9199 19.4934 15.8266 19.4934 15.7466 19.5067C13.9066 19.44 12.4399 17.9334 12.4399 16.0667C12.4399 14.16 13.9733 12.6267 15.8799 12.6267C17.7866 12.6267 19.3199 14.1734 19.3199 16.0667C19.3066 17.9334 17.8399 19.4534 15.9999 19.5067Z"
+                        stroke="white"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M12.12 23.7067C10.24 24.9601 10.24 27.0134 12.12 28.2667C14.2533 29.6934 17.7466 29.6934 19.88 28.2667C21.76 27.0134 21.76 24.9601 19.88 23.7067C17.76 22.2934 14.2533 22.2934 12.12 23.7067Z"
+                        stroke="white"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </span>
+                </h4>
               </div>
             </div>
           </div>
