--- a/TFG_DAW/frontend/src/app/components/navbar/navbar.component.html
+++ b/TFG_DAW/frontend/src/app/components/navbar/navbar.component.html
@@ -34,7 +34,7 @@
 
       <!-- Añadir icon -->
       <li class="nav-item">
-        <a class="nav-link" href="#"
+        <a class="nav-link" [routerLink]="['/agregar']"
           ><svg
             width="48"
             height="48"
@@ -137,3 +137,4 @@
     </ul>
   </div>
 </nav>
+<hr class="custom-divider" />
