--- a/TFG_DAW/frontend/src/app/components/login/login.component.css
+++ b/TFG_DAW/frontend/src/app/components/login/login.component.css
@@ -111,7 +111,7 @@
   gap: 10px;
   background-color: #ffffff;
   padding: 30px;
-  width: 450px;
+  width: 500px;
   border-radius: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -261,4 +261,41 @@
   .checkbox-wrapper input[type="checkbox"]:checked + .terms-label .checkbox-tick {
   stroke-dashoffset: 0;
 }
-      
+
+/* flip */
+.flip-card {
+  width: 100%;
+  max-width: 550px; /* o el valor que prefieras */
+  height: 550px; /* ajusta según el contenido más alto */
+  perspective: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+
+.flipped {
+  transform: rotateY(180deg);
+}
+
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  top: 0;
+  left: 0;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+}
