--- a/TFG_DAW/frontend/src/app/components/perfil/perfil.component.css
+++ b/TFG_DAW/frontend/src/app/components/perfil/perfil.component.css
@@ -3,25 +3,6 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: #e8e8e8;
   }
-    /* Divider */
-    .custom-divider {
-      background-color: #240046;
-    }
-  
-  /* Tarjeta principal */
-  .card {
-    border: 1px solid white;
-    border-radius: 17px;
-    box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
-    transition: all 0.5s;
-  }
-  .card:hover {
-    border: 1px solid black;
-    transform: scale(1.05);
-  }
-  .card:active {
-    transform: scale(0.95) rotateZ(1.7deg);
-  }
 
   /* Imagen de perfil */
   img.rounded-circle {
@@ -36,9 +17,6 @@ body {
   h6 {
     font-weight: 600;
   }
-  i:hover{
-    cursor: pointer;
-  }
   
   /* Texto general */
   .text-muted {
@@ -49,21 +27,8 @@ body {
     color: #333 !important;
   }
   
-  /* Botones */
-  .btn-outline-secondary {
-    border-radius: 999px;
-    border: 2px solid #ccc;
-    color: #333;
-    transition: all 0.3s ease;
-  }
-  
-  .btn-outline-secondary:hover {
-    background-color: #eee;
-    border-color: #C77DFF;
-  }
-  
   .btn-dark {
-    background-color: #5A189A;
+    background-color: #240046;
     border: none;
     color: white;
     border-radius: 999px;
@@ -71,7 +36,7 @@ body {
   }
   
   .btn-dark:hover {
-    background-color: #C77DFF;
+    background-color: #5A189A;
   }
   
   /* Información de usuario */
@@ -82,12 +47,5 @@ body {
   }
   
   .border {
-    border-color: #C77DFF !important;
-  }
-
-  .list-group-item:hover {
-    background-color: #e8e8e8;
-  }
-  .list-group-item {
-    border-color: #C77DFF;
+    border-color: #5A189A !important;
   }
