--- a/TFG_DAW/frontend/src/app/components/perfil/perfil.component.html
+++ b/TFG_DAW/frontend/src/app/components/perfil/perfil.component.html
@@ -1,8 +1,5 @@
 <app-navbar></app-navbar>
-<hr class="custom-divider" />
-<!-- Divider -->
 
-<!-- Perfil -->
 <!-- Perfil y tarjeta lateral -->
 <div class="container my-3 d-flex justify-content-center align-items-start">
   <div class="row w-100" style="max-width: 1200px">
@@ -96,15 +93,105 @@
       >
         <h3 class="fw-bold text-dark mb-3">Historial de reservas</h3>
         <div class="list-group">
-          <a class="list-group-item list-group-item-action">A link item</a>
-          <a class="list-group-item list-group-item-action">A link item</a>
-          <a class="list-group-item list-group-item-action">A link item</a>
-          <a class="list-group-item list-group-item-action">A link item</a>
-          <a class="list-group-item list-group-item-action">A link item</a>
-          <a class="list-group-item list-group-item-action">A link item</a>
-          <a class="list-group-item list-group-item-action">A link item</a>
-          <a class="list-group-item list-group-item-action">A link item</a>
-          <a class="list-group-item list-group-item-action">A link item</a>
+          <a
+            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >
+            A link item
+            <div>
+              <button class="btn btn-sm btn-outline-warning me-2">
+                Editar
+              </button>
+              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+            </div>
+          </a>
+          <a
+            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >
+            A link item
+            <div>
+              <button class="btn btn-sm btn-outline-warning me-2">
+                Editar
+              </button>
+              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+            </div>
+          </a>
+          <a
+            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >
+            A link item
+            <div>
+              <button class="btn btn-sm btn-outline-warning me-2">
+                Editar
+              </button>
+              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+            </div>
+          </a>
+          <a
+            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >
+            A link item
+            <div>
+              <button class="btn btn-sm btn-outline-warning me-2">
+                Editar
+              </button>
+              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+            </div>
+          </a>
+          <a
+            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >
+            A link item
+            <div>
+              <button class="btn btn-sm btn-outline-warning me-2">
+                Editar
+              </button>
+              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+            </div>
+          </a>
+          <a
+            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >
+            A link item
+            <div>
+              <button class="btn btn-sm btn-outline-warning me-2">
+                Editar
+              </button>
+              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+            </div>
+          </a>
+          <a
+            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >
+            A link item
+            <div>
+              <button class="btn btn-sm btn-outline-warning me-2">
+                Editar
+              </button>
+              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+            </div>
+          </a>
+          <a
+            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >
+            A link item
+            <div>
+              <button class="btn btn-sm btn-outline-warning me-2">
+                Editar
+              </button>
+              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+            </div>
+          </a>
+          <a
+            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >
+            A link item
+            <div>
+              <button class="btn btn-sm btn-outline-warning me-2">
+                Editar
+              </button>
+              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
+            </div>
+          </a>
         </div>
       </div>
     </div>
