--- a/TFG_DAW/frontend/src/app/components/perfil/perfil.component.html
+++ b/TFG_DAW/frontend/src/app/components/perfil/perfil.component.html
@@ -15,7 +15,7 @@
             height="100"
             alt="Foto de perfil"
           />
-          <h4 class="fw-bold text-dark">Juan Pérez</h4>
+          <h4 class="fw-bold text-dark">{{ usuario.nombre }}</h4>
           <p class="text-muted mb-4">email.correo.com</p>
         </div>
 
