--- a/TFG_DAW/frontend/src/app/components/navbar/navbar.component.html
+++ b/TFG_DAW/frontend/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <ul class="navbar-nav d-flex flex-row">
       <!-- Home icon -->
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/home']">
+        <a class="nav-link" [routerLink]="['/home']" title="Home">
           <svg
             width="42"
             height="42"
@@ -34,7 +34,10 @@
 
       <!-- Añadir icon -->
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/agregar']"
+        <a
+          class="nav-link"
+          (click)="navegarAgregarEspacio()"
+          title="Agregar Espacio"
           ><svg
             width="48"
             height="48"
@@ -55,7 +58,7 @@
 
       <!-- Calendar icon -->
       <li class="nav-item">
-        <a class="nav-link" href="#"
+        <a class="nav-link" href="#" title="Mis Reservas"
           ><svg
             width="48"
             height="48"
@@ -93,8 +96,9 @@
       </li>
 
       <!-- Perfil icon -->
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/perfil']">
+      <li *ngIf="logeado" class="nav-item">
+        <!-- si esta logeado -->
+        <a class="nav-link" [routerLink]="['/perfil']" title="Perfil">
           <svg
             viewBox="-0.5 0 25 25"
             fill="none"
@@ -133,6 +137,69 @@
             </g>
           </svg>
         </a>
+      </li>
+      <li *ngIf="logeado" class="nav-item">
+        <!-- logout -->
+        <a class="nav-link" (click)="logout()" title="Cerrar Sesión">
+          <svg
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                d="M9.00195 7C9.01406 4.82497 9.11051 3.64706 9.87889 2.87868C10.7576 2 12.1718 2 15.0002 2L16.0002 2C18.8286 2 20.2429 2 21.1215 2.87868C22.0002 3.75736 22.0002 5.17157 22.0002 8L22.0002 16C22.0002 18.8284 22.0002 20.2426 21.1215 21.1213C20.2429 22 18.8286 22 16.0002 22H15.0002C12.1718 22 10.7576 22 9.87889 21.1213C9.11051 20.3529 9.01406 19.175 9.00195 17"
+                stroke="#240046"
+                stroke-width="1.5"
+                stroke-linecap="round"
+              ></path>
+              <path
+                d="M15 12L2 12M2 12L5.5 9M2 12L5.5 15"
+                stroke="#240046"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+            </g>
+          </svg>
+        </a>
+      </li>
+      <!-- si no está logeado -->
+      <li *ngIf="!logeado" class="nav-item">
+        <a class="nav-link" [routerLink]="['/login']" title="Iniciar Sesión">
+          <svg
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                d="M2.00098 11.999L16.001 11.999M16.001 11.999L12.501 8.99902M16.001 11.999L12.501 14.999"
+                stroke="#240046"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+              <path
+                d="M9.00195 7C9.01406 4.82497 9.11051 3.64706 9.87889 2.87868C10.7576 2 12.1718 2 15.0002 2L16.0002 2C18.8286 2 20.2429 2 21.1215 2.87868C22.0002 3.75736 22.0002 5.17157 22.0002 8L22.0002 16C22.0002 18.8284 22.0002 20.2426 21.1215 21.1213C20.2429 22 18.8286 22 16.0002 22H15.0002C12.1718 22 10.7576 22 9.87889 21.1213C9.11051 20.3529 9.01406 19.175 9.00195 17"
+                stroke="#240046"
+                stroke-width="1.5"
+                stroke-linecap="round"
+              ></path>
+            </g></svg
+        ></a>
       </li>
     </ul>
   </div>
