--- a/TFG_DAW/frontend/src/app/components/perfil/perfil.component.html
+++ b/TFG_DAW/frontend/src/app/components/perfil/perfil.component.html
@@ -15,8 +15,9 @@
             height="100"
             alt="Foto de perfil"
           />
-          <h4 class="fw-bold text-dark">{{ usuario.nombre }}</h4>
-          <p class="text-muted mb-4">email.correo.com</p>
+          <!-- solo intenta acceder a sus propiedades si usuario ya está definido -->
+          <h4 class="fw-bold text-dark">{{ usuario?.nombre }}</h4>
+          <p class="text-muted mb-4">{{ usuario?.email }}</p>
         </div>
 
         <div class="row g-3 mb-3">
@@ -47,7 +48,12 @@
           <button class="btn btn-outline-secondary rounded-pill px-4">
             Editar perfil
           </button>
-          <button class="btn btn-dark rounded-pill px-4">Cerrar sesión</button>
+          <button
+            class="btn btn-dark rounded-pill px-4"
+            (click)="logoutPerfil()"
+          >
+            Cerrar sesión
+          </button>
         </div>
       </div>
     </div>
