EliminarEspacio/Filtros/Error Page/Categorias
- Se pueden eliminar Espacios
- Categorias añadidas
- Filtrar por capacidad, nombre o categoría
- Reajustes en el home
- Fix de algunos bugs
- Error Page
- Redireccionamientos
- Control de errores

--- a/TFG_DAW/frontend/src/app/components/agregar/agregar.component.html
+++ b/TFG_DAW/frontend/src/app/components/agregar/agregar.component.html
@@ -30,7 +30,26 @@
           maxlength="200"
           placeholder="Cuéntanos sobre tu espacio..."
           [(ngModel)]="espacio.descripcion"
+          required
         ></textarea>
+      </div>
+      <!-- descrripcion -->
+      <div class="mb-3">
+        <label for="categoria" class="form-label">Categoria</label>
+        <select
+          class="form-control"
+          name="categoria"
+          id="categoria"
+          [(ngModel)]="espacio.categoria"
+          required=""
+        >
+          <option value="" disabled hidden>Selecciona categoria</option>
+          <option value="deporte">Deporte</option>
+          <option value="Spa">Spa</option>
+          <option value="gaming">Gaming</option>
+          <option value="musica">Musica</option>
+          <option value="bussiness">Bussiness</option>
+        </select>
       </div>
       <!-- ubicacion -->
       <div class="mb-3">
