--- a/TFG_DAW/frontend/src/app/components/navbar/navbar.component.html
+++ b/TFG_DAW/frontend/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <ul class="navbar-nav d-flex flex-row">
       <!-- Home icon -->
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/home']" title="Home">
+        <a class="nav-link" (click)="metodoHome()" title="Home">
           <svg
             width="42"
             height="42"
