--- a/TFG_DAW/frontend/src/app/components/perfil/perfil.component.html
+++ b/TFG_DAW/frontend/src/app/components/perfil/perfil.component.html
@@ -97,107 +97,31 @@
         class="card p-4 rounded-4 shadow-lg"
         style="width: 100%; font-family: 'Poppins', sans-serif"
       >
-        <h3 class="fw-bold text-dark mb-3">Historial de reservas</h3>
-        <div class="list-group">
+        <h3 class="fw-bold text-dark mb-3">Mis Espacios</h3>
+        <div *ngIf="espacios && espacios.length > 0" class="list-group">
           <a
             class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+            [routerLink]="['/detail/' + espacio.id]"
+            *ngFor="let espacio of espacios"
           >
-            A link item
+            {{ espacio.nombre }}
             <div>
               <button class="btn btn-sm btn-outline-warning me-2">
                 Editar
               </button>
-              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
-            </div>
-          </a>
-          <a
-            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-          >
-            A link item
-            <div>
-              <button class="btn btn-sm btn-outline-warning me-2">
-                Editar
+              <button
+                class="btn btn-sm btn-outline-danger"
+                (click)="eliminarEspacio(espacio.id)"
+              >
+                Eliminar
               </button>
-              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
             </div>
           </a>
-          <a
-            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-          >
-            A link item
-            <div>
-              <button class="btn btn-sm btn-outline-warning me-2">
-                Editar
-              </button>
-              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
-            </div>
-          </a>
-          <a
-            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-          >
-            A link item
-            <div>
-              <button class="btn btn-sm btn-outline-warning me-2">
-                Editar
-              </button>
-              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
-            </div>
-          </a>
-          <a
-            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-          >
-            A link item
-            <div>
-              <button class="btn btn-sm btn-outline-warning me-2">
-                Editar
-              </button>
-              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
-            </div>
-          </a>
-          <a
-            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-          >
-            A link item
-            <div>
-              <button class="btn btn-sm btn-outline-warning me-2">
-                Editar
-              </button>
-              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
-            </div>
-          </a>
-          <a
-            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-          >
-            A link item
-            <div>
-              <button class="btn btn-sm btn-outline-warning me-2">
-                Editar
-              </button>
-              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
-            </div>
-          </a>
-          <a
-            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-          >
-            A link item
-            <div>
-              <button class="btn btn-sm btn-outline-warning me-2">
-                Editar
-              </button>
-              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
-            </div>
-          </a>
-          <a
-            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-          >
-            A link item
-            <div>
-              <button class="btn btn-sm btn-outline-warning me-2">
-                Editar
-              </button>
-              <button class="btn btn-sm btn-outline-danger">Eliminar</button>
-            </div>
-          </a>
+        </div>
+        <div *ngIf="espacios.length === 0" class="container">
+          <h5 class="text-center mt-5">
+            Aún no tienes ningún Espacio publicado
+          </h5>
         </div>
       </div>
     </div>
