--- a/TFG_DAW/frontend/src/app/components/perfil/perfil.component.html
+++ b/TFG_DAW/frontend/src/app/components/perfil/perfil.component.html
@@ -101,12 +101,14 @@
         <div *ngIf="espacios && espacios.length > 0" class="list-group">
           <a
             class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-            [routerLink]="['/detail/' + espacio.id]"
             *ngFor="let espacio of espacios"
           >
             {{ espacio.nombre }}
             <div>
-              <button class="btn btn-sm btn-outline-warning me-2">
+              <button
+                class="btn btn-sm btn-outline-warning me-2"
+                [routerLink]="['/agregar', espacio.id]"
+              >
                 Editar
               </button>
               <button
