Reservas calendario y horas en detail sin back

--- a/TFG_DAW/frontend/src/app/components/navbar/navbar.component.html
+++ b/TFG_DAW/frontend/src/app/components/navbar/navbar.component.html
@@ -58,7 +58,7 @@
 
       <!-- Calendar icon -->
       <li class="nav-item">
-        <a class="nav-link" href="#" title="Mis Reservas"
+        <a class="nav-link" [routerLink]="['/reservas']" title="Mis Reservas"
           ><svg
             width="48"
             height="48"
