--- a/TFG_DAW/frontend/src/styles.css
+++ b/TFG_DAW/frontend/src/styles.css
@@ -61,3 +61,6 @@ body {
     background-color: #eee;
     border-color: #5A189A;
   }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
