--- a/TFG_DAW/frontend/src/app/components/detail/detail.component.html
+++ b/TFG_DAW/frontend/src/app/components/detail/detail.component.html
@@ -18,6 +18,11 @@
               alt="Imagen de fondo"
               style="width: 100%; height: 800px; border-radius: 4px"
             />
+            <app-reservas
+              *ngIf="mostrarCalendario"
+              (dateTimeSelected)="handleDateTime($event)"
+            ></app-reservas>
+            <!-- recibir la fecha completa desde el componente hijo -->
           </div>
 
           <!-- Card Body debajo de la imagen -->
@@ -32,7 +37,9 @@
             </div>
             <div class="row">
               <h4 class="col-4 text-light">{{ espacio.precio }}€/h</h4>
-              <button class="btn btn-light col-4">Reservar</button>
+              <button (click)="reservar()" class="btn btn-light col-4">
+                Reservar
+              </button>
               <h4 class="col-4 text-light">
                 {{ espacio.capacidad }}
                 <span>
@@ -157,7 +164,6 @@
       </div>
     </div>
   </main>
-
   <!-- Footer -->
   <app-footer></app-footer>
 </div>
