--- a/TFG_DAW/frontend/src/app/components/calendario/calendario.component.html
+++ b/TFG_DAW/frontend/src/app/components/calendario/calendario.component.html
@@ -7,10 +7,11 @@
       <mat-card class="p-4 calendario-card">
         <h4 class="mb-3 text-center text-white">Calendario de reservas</h4>
         <mat-calendar
-          [selected]="selectedDate"
-          (selectedChange)="onDateChange($event)"
+          ngSkipHydration
           [minDate]="minDate"
           [dateClass]="getDateClass"
+          [selected]="selectedDate"
+          (selectedChange)="onDateChange($event)"
         ></mat-calendar>
       </mat-card>
     </div>
@@ -19,8 +20,15 @@
   <!-- Lista de reservas -->
   <h3 class="text-center mb-4">Mis reservas</h3>
 
-  <div *ngIf="reservas.length === 0" class="text-center text-muted">
-    No tienes reservas aÃºn.
+  <!-- si está logeado -->
+  <div *ngIf="reservas.length === 0 && usuario" class="text-center text-muted">
+    Aún no has hecho ninguna reserva.
+  </div>
+
+  <!-- si no esta logueado -->
+  <div *ngIf="!usuario" class="text-center text-muted">
+    Inicia sesión para poder hacer reservas.
+    <a [routerLink]="['/login']">Iniciar sesión.</a>
   </div>
 
   <div class="row justify-content-center" *ngIf="reservas.length > 0">
@@ -32,23 +40,72 @@
         >
           <div class="d-flex justify-content-between align-items-center">
             <div>
-              <h5 class="mb-1">{{ reserva.fecha | date : "fullDate" }}</h5>
-              <p class="mb-0"><strong>Hora:</strong> {{ reserva.hora }}</p>
-              <p class="mb-0"><strong>Espacio:</strong> {{ reserva.tipo }}</p>
+              <h5 class="mb-1">
+                {{ reserva.fecha | date : "fullDate" : "" : "es" }}
+              </h5>
+              <p class="mb-0">
+                <strong>Hora:</strong>
+                {{ reserva.fecha | date : "shortTime" : "" : "es" }}
+              </p>
+              <p class="mb-0">
+                <strong>Espacio:</strong> {{ espacio?.nombre }}
+              </p>
+              <p class="mb-0">
+                <strong>Ubicación:</strong> {{ espacio?.ubicacion }}
+              </p>
             </div>
             <div class="d-flex flex-column align-items-end gap-2">
+              <!-- pasamos la reserva en la qque se selecciona el boton de editar como la reservaEditando -->
               <button
-                class="btn btn-sm btn-outline-primary"
-                (click)="editarReserva(reserva)"
+                *ngIf="!reservaEditando"
+                class="btn btn-sm btn-outline-warning"
+                (click)="reservaEditando = reserva"
               >
                 Editar
               </button>
               <button
+                *ngIf="!reservaEditando"
                 class="btn btn-sm btn-outline-danger"
                 (click)="eliminarReserva(reserva)"
               >
                 Eliminar
               </button>
+
+              <!-- Formulario edicion de la reserva -->
+              <div *ngIf="reservaEditando" class="mt-2">
+                <h5>Editar reserva</h5>
+
+                <form (ngSubmit)="guardarEdicion()">
+                  <div class="mb-3">
+                    <label>Fecha:</label>
+                    <input
+                      type="datetime-local"
+                      class="form-control"
+                      [(ngModel)]="reservaEditando.fecha"
+                      name="fecha"
+                      required
+                    />
+                  </div>
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-6">
+                        <button type="submit" class="btn btn-success">
+                          Guardar
+                        </button>
+                      </div>
+                      <div class="col-6">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          (click)="reservaEditando = null"
+                        >
+                          Cancelar
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
@@ -56,3 +113,4 @@
     </div>
   </div>
 </div>
+<app-footer></app-footer>
